--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,184 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+.navbar{
+  background-color: #040a0ce0;
+}
+.navbar-brand{
+  padding: 5px;
+  font-family: serif;
+  color: white;
+}
+.main{
+  min-height: 100vw;
+  background-color: #56042C;
+}
+form{
+  padding-top: 20px;
+}
+#searchBar{
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.search-field{
+  width: 85vw;
+}
+.label{
+  width: fit-content;
+}
+
+.button{
+  padding-top: 2vw;
+}
+
+/*cards styling*/
+.container{
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  max-width: 100vw;
+  flex-wrap: wrap;
+  z-index: 1;
+  max-height: fit-content;
+}
+.container .finalsCard{
+  position: relative;
+  width: 270px;
+  height: 290px;
+  margin: 15px;
+  box-shadow: 10px 10px 15px rgb(0, 0, 0, 0.5) ;
+  background: linear-gradient(to right bottom, #57032cef, #49bce35e);
+  backdrop-filter: blur(2px);
+  justify-content: center;
+  text-align: center;
+  color: rgba(255, 208, 0, 0.911);
+  transition: 0.5s;
+}
+
+/*pop out effect on hover */
+.finalsCard:hover{
+    transform: scale(1.2);
+    z-index: 2;
+}
+/*appear on hover */
+.finalsCard .content{
+  font-family: sans-serif;
+  transform:translateY(0px);
+  opacity: 0;
+  transition: 0.5s;
+}
+.finalsCard:hover .content{
+  transform: translate(0px);
+  opacity: 1;
+}
+/*card elements styling*/
+.content h1{
+  position: absolute;
+  top: -102px;
+  right: 8px;
+  font-size: 5em;
+  color: rgba(14, 14, 13, 0.795);
+  pointer-events: none;
+  font-weight: bolder;
+}
+
+/*WinnerCard styling*/
+.container #card{
+  box-shadow: 10px 10px 20px rgb(0, 0, 0, 0.5) ;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-image: url("https://i.pinimg.com/564x/15/98/73/159873cafc9f9aa8480c1e4edad632ac.jpg");
+  background-size: cover;
+  background-color: rgba(0, 0, 0, 0.5);
+  background-blend-mode: darken;
+  height: 30vw;
+  width: 40vw;
+  animation: change 40s infinite ease-in-out;
+}
+.details{
+  font-family: 'LibreCaslonTextRegular';
+  font-weight: bolder;
+  align-self: center;
+  text-align: center;
+  color: white;
+}
+.details h1{
+  font-family: 'PumpkinRegular';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 3em;
+  color: rgba(255, 208, 0, 0.911);
+}
+.returnButton{
+  align-self: center;
+}
+/*styling about page*/
+.about{
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  background-color: #56042C;
+}
+.aboutPage{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-left: 80px;
+  padding-right: 80px;
+  color: aliceblue;
+}
+.trophyImg{
+  padding-top: 20px;
+  padding-right: 50px;
+}
+.aboutPage h1{
+  font-weight: bolder;
+  font-family: serif;
+  font-size: 3em;
+  color: rgba(255, 208, 0, 0.911);
+}
+.aboutPage h2{
+  font-family: serif;
+  font-weight: bolder;
+  color: rgba(255, 208, 0, 0.911);
+}
+.aboutPage h5{
+  font-family: serif;
+  font-weight: bold;
+  color: rgb(90, 252, 238);;
+}
+#bold{
+  color: blue;
+}
+@keyframes change{
+    0%
+    {
+      background-image:url("https://i.pinimg.com/564x/15/98/73/159873cafc9f9aa8480c1e4edad632ac.jpg");
+    }
+    20%
+    {
+      background-image:url("https://i.pinimg.com/564x/80/25/ea/8025eae6af7b97de5c925dc0d2df46ff.jpg");
+    }
+    40%
+    {
+      background-image:url("https://i.pinimg.com/736x/6c/b1/5b/6cb15bff184a563cd94d16efdd0cb819.jpg");
+    }
+    60%
+    {
+      background-image:url("https://i.pinimg.com/564x/19/82/64/198264d06bf9916bcb573e0d33f6ce08.jpg");
+    }
+    80%
+    {
+      background-image:url("https://i.pinimg.com/736x/af/84/1c/af841c9cfa821a5e0b5c00b9ff23e725.jpg")
+    }
+    100%
+    {
+      background-image:url("https://i.pinimg.com/564x/15/98/73/159873cafc9f9aa8480c1e4edad632ac.jpg");
+    }
 }
